# texo

./: .gitignore  ADR-004-snapshot-evidence-temporal-model.md  AGENTS.md  ARCHITECTURE.md  BLOCKED.md  CONVENTIONS.md  Cargo.toml  HACKATHON.md  INTELLIGENCE.md  INVARIANTS.md  LICENSE-MIT  README.md  ROADMAP.md  SPEC.md  WO0-DEFERRED.md  clippy.toml  deny.toml  justfile  mcp-config.example.json  rustfmt.toml  typos.toml
.github/workflows/: ci.yml
assets/: index.html
crates/texo-agent/: Cargo.toml
crates/texo-agent/assets/: index.html
crates/texo-agent/src/: bootstrap.rs  chat.rs  lib.rs  main.rs  memory.rs  server.rs  session.rs
crates/texo-agent/tests/: agent_flow.rs
crates/texo-cli/: Cargo.toml
crates/texo-cli/src/: main.rs
crates/texo-cli/src/commands/: agent_context.rs  check_staleness.rs  claims.rs  compile.rs  conflicts.rs  ingest.rs  init.rs  mod.rs  relate.rs  supersede.rs  verify.rs
crates/texo-cli/tests/: cli_command_branches.rs  cli_golden.rs  demo_flow.rs  e2e_pipeline.rs
crates/texo-cli/tests/snapshots/: cli_golden__claims_json.snap
crates/texo-core/: Cargo.toml
crates/texo-core/src/: config.rs  error.rs  fixture.rs  ingest.rs  lib.rs  semantics.rs  semantics_pipeline.rs
crates/texo-core/src/agent/: context.rs  freshness.rs  mod.rs
crates/texo-core/src/conflicts/: commit.rs  detect.rs  mod.rs  verify.rs
crates/texo-core/src/events/: envelope.rs  mod.rs  payloads.rs
crates/texo-core/src/extract/: cmd.rs  faithfulness.rs  heuristics.rs  hints.rs  mod.rs  word_match.rs
crates/texo-core/src/journal/: append.rs  mod.rs  receipt.rs  replay.rs  store.rs
crates/texo-core/src/render/: html.rs  json.rs  markdown.rs  mod.rs
crates/texo-core/src/replay/: apply.rs  mod.rs  reducer.rs  state.rs
crates/texo-core/src/source/: markdown.rs  mod.rs
crates/texo-core/src/stale/: check.rs  diagnostic.rs  mod.rs
crates/texo-core/src/state/: claim_lifecycle.rs  conflict_lifecycle.rs  ingest.rs  journal.rs  mod.rs
crates/texo-core/src/types/: coordinate.rs  ids.rs  mod.rs  parse.rs  receipt.rs  sequence.rs  status.rs
crates/texo-core/tests/: agent_context.rs  compile_fail.rs  compile_journaled.rs  conflicts_commit.rs  conflicts_courtroom.rs  decode_unsupported_kind.rs  error_paths_journal.rs  eval_helios.rs  extract_cmd.rs  golden_agent_context.rs  golden_compile.rs  golden_ingest.rs  golden_staleness.rs  idempotent_replay.rs  incremental_supersession.rs  ingest_paths.rs  ingest_receipts.rs  multi_workspace.rs  properties_extract_soundness.rs  properties_ids_determinism.rs  properties_parser_robustness.proptest-regressions  properties_parser_robustness.rs  properties_replay_fold.proptest-regressions  properties_replay_fold.rs  properties_replay_laws.rs  properties_sequence.rs  relate_clustered.rs  replay_truth.rs  staleness_courtroom.rs  support.rs  thesis_meta.rs
crates/texo-core/tests/common/: mod.rs  proptest.rs
crates/texo-core/tests/compile_fail/: closed_journal_append.rs  closed_journal_append.stderr  unreplayed_into_state.rs  unreplayed_into_state.stderr
crates/texo-core/tests/snapshots/: golden_agent_context__agent_context_demo.snap  golden_compile__compile_demo.snap  golden_ingest__ingest_demo.snap  golden_staleness__staleness_stale_onboarding.snap
crates/texo-extract/: Cargo.toml
crates/texo-extract/src/: cache.rs  lib.rs  main.rs
crates/texo-extract/tests/: helios_e2e.rs  helios_frozen.rs
crates/texo-mcp/: Cargo.toml
crates/texo-mcp/src/: error.rs  lib.rs  protocol.rs  server.rs  tools.rs
crates/texo-mcp/tests/: tools_integration.rs
crates/texo-semantics/: Cargo.toml
crates/texo-semantics/src/: embedder.rs  error.rs  lib.rs  nli.rs  openrouter.rs
crates/texo-semantics/tests/: oracle_live.rs
deploy/: README.md  deploy.sh  env.example  provision-ecs.sh  texo-agent.service
docs/: BATPAK-SCALEOUT-COMPOSITION.md
docs/hardening/: UPSTREAM-LEDGER.md
evidence/: intelligence-performance.json
examples/helios/: ground_truth.toml  onboarding.generated.md
extensions/vscode/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
hackathon/: ALIBABA-CLOUD-USAGE.md  architecture.mmd  blog-post.md  devpost-description.md
sample_sources/: current_architecture.md  meeting_notes.md  old_process.md  stale_onboarding.md
scripts/: demo-e2e.sh  demo-intelligence-e2e.sh  extract-identity.py  measure-intelligence.sh  proof-ecs.sh  verify-old-store.sh
scripts/bench/: gen_drift.py  run-rung.sh  score_drift.py  shard_enwik8.py
src/: agent_catalog.rs  backup.rs  code_index.rs  config.rs  doctor.rs  error.rs  gateway.rs  git_source.rs  hooks.rs  install.rs  journal_store.rs  knowledge.rs  lexicon.rs  lib.rs  reconcile.rs  replica_net.rs  replication.rs  topology.rs
src/backup/: create.rs  filesystem.rs  model.rs  restore.rs  verify.rs
src/claims/: campaign.rs  card.rs  compile_log.rs  conflict.rs  evidence.rs  mod.rs  session_log.rs  settlement.rs  source.rs  status.rs  temporal.rs  timeline.rs  workspace.rs
src/code_index/: analysis.rs  artifact.rs  contract.rs  persistence.rs  scip_import.rs  util.rs
src/compat/: batpak.rs  bvisor.rs  mod.rs  netbat.rs
src/config/: model.rs
src/context/: mod.rs
src/doctor/: model.rs
src/events/: coordinate.rs  ids.rs  inventory.rs  machines.rs  (+2 more)
tests/: advisory_hooks.rs  agent_catalog.rs  agent_context.rs  appliance_install.rs  backend_relation_rejudge_durability.rs  backup.rs  cli_command_branches.rs  cli_golden.rs  code_index.rs  compile_fail.rs  compile_journaled.rs  conflicts_courtroom.rs  demo_flow.rs  doctor.rs  e2e_pipeline.rs  eval_helios.rs  git_source.rs  golden_agent_context.rs  golden_compile.rs  golden_ingest.rs  golden_staleness.rs  helios_e2e.rs  helios_frozen.rs  http_client.rs  http_server.rs  idempotent_replay.rs  idempotent_terminal.rs  ingest_contract.rs  instrumentation.rs  knowledge_index.rs  mcp_stdio.rs  multi_client_scaleout.rs  ops_kit.rs  oracle_live.rs  projection_laws.rs  reconcile.rs  relation_campaign_gate.rs  remote_replication.rs  replication_scaleout.rs  session_lanes.rs  (+3 more)
ui/: astro.config.ts  package.json  pnpm-lock.yaml
(+155 files in other folders)
