[workspace]
resolver = "2"
members = ["crates/texo-core", "crates/texo-cli", "crates/texo-mcp"]
default-members = ["crates/texo-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
batpak = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
blake3 = "1"
toml = "0.8"
walkdir = "2"
glob = "0.3"
pulldown-cmark = { version = "0.13", default-features = false }
tempfile = "3"
insta = { version = "1", features = ["json", "redactions"] }
proptest = "1"
assert_cmd = "2"
assert_matches = "1"
predicates = "3"
trybuild = "1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
implicit_hasher = "allow"
format_push_string = "allow"
vec_init_then_push = "allow"

[profile.dev]
debug = 1
