[package]
name = "texo"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Claim-chain memory for teams and agents: journaled claims, supersession with receipts, deterministic replay. Built on the batpak family."

[lib]
name = "texo"
path = "src/lib.rs"

[[bin]]
name = "texo"
path = "src/bin/texo.rs"

[dependencies]
batpak = "0.9.0"
syncbat = "0.9.0"
hostbat = "0.9.0"
flume = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
blake3 = "1"
toml = "0.8"
walkdir = "2"
glob = "0.3"
pulldown-cmark = { version = "0.12", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json", "redactions"] }
proptest = "1"
assert_cmd = "2"
predicates = "3"
assert_matches = "1"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
implicit_hasher = "allow"
format_push_string = "allow"
vec_init_then_push = "allow"

[profile.dev]
debug = 1
