[package]
name = "texo"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Claim-chain memory for teams and agents: journaled claims, supersession with receipts, deterministic replay. Built on the batpak family."

[lib]
name = "texo"
path = "src/lib.rs"

[[bin]]
name = "texo"
path = "src/bin/texo.rs"

[features]
default = ["openrouter"]
openrouter = ["dep:rustls", "dep:webpki-roots"]

[dependencies]
batpak = "0.9.0"
syncbat = "0.9.0"
hostbat = "0.9.0"
flume = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmpv = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
blake3 = "1"
toml = "0.8"
walkdir = "2"
glob = "0.3"
pulldown-cmark = { version = "0.12", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json", "redactions"] }
proptest = "1"
assert_cmd = "2"
predicates = "3"
assert_matches = "1"
trybuild = "1"

# Lint bar: batpak's workspace lints verbatim (the composition bar), plus
# pedantic-as-warn which texo already carried. Exceptions are per-site
# #[expect(..)] with a reason, never table-level allows.
[lints.rust]
missing_docs = "warn"
deprecated = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
panic = "deny"
needless_return = "deny"
print_stdout = "deny"
print_stderr = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
wildcard_enum_match_arm = "warn"
assertions_on_constants = "deny"
disallowed_methods = "deny"
large_enum_variant = "warn"
clone_on_ref_ptr = "warn"
needless_pass_by_value = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "warn"

[profile.dev]
debug = 1
