[package]
name = "texo-agent"
description = "texo memory agent — HTTP chat agent whose persistent memory is a texo claim-chain workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "texo-agent"
path = "src/main.rs"

[dependencies]
texo-core = { path = "../texo-core", version = "0.1.0" }
texo-extract = { path = "../texo-extract", version = "0.1.0" }
texo-semantics = { path = "../texo-semantics", version = "0.1.0" }
axum.workspace = true
# The workspace tokio features plus `net` for the TCP listener.
tokio = { workspace = true, features = ["net"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Async client for the chat model only (model HTTP is not texo-core's sync
# BatPak I/O). rustls-tls to match texo-semantics: no OpenSSL system dependency.
[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
