[package]
name = "texo-cli"
description = "texo — context version control for claims"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "texo"
path = "src/main.rs"

[dependencies]
texo-core = { path = "../texo-core", version = "0.1.0" }
texo-mcp = { path = "../texo-mcp", version = "0.1.0" }
texo-semantics = { path = "../texo-semantics", version = "0.1.0" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
insta.workspace = true
assert_matches.workspace = true

[lints]
workspace = true
