[package]
name = "texo-core"
description = "Context version control for claims — core library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
batpak.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true
toml.workspace = true
walkdir.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
proptest.workspace = true
trybuild.workspace = true

[lints]
workspace = true
