[package]
name = "texo-extract"
description = "texo Stage-1 extractor — OpenRouter-backed atomic claim proposal for the extract_via_cmd seam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "texo-extract"
path = "src/main.rs"

[dependencies]
texo-core = { path = "../texo-core", version = "0.1.0" }
texo-semantics = { path = "../texo-semantics", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true

[lints]
workspace = true
