[package]
name = "texo-semantics"
description = "Semantic backends (embeddings, rerank, NLI) for texo-core: hosted OpenRouter by default, optional local ONNX"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Hosted HTTP backends via OpenRouter. Default so the crate builds and runs on
# any CPU (no AVX2 / ONNX Runtime required).
default = ["openrouter"]
# OpenRouter pulls a blocking HTTP client plus JSON (de)serialisation.
openrouter = ["dep:reqwest", "dep:serde", "dep:serde_json"]
# Local ONNX backends: only for modern hardware (fastembed/ort need AVX2). Off by
# default so a default build never links ONNX Runtime.
local-onnx = [
    "dep:fastembed",
    "dep:ort",
    "dep:ndarray",
    "dep:tokenizers",
    "dep:hf-hub",
    "dep:serde",
    "dep:serde_json",
]

[dependencies]
texo-core = { path = "../texo-core", version = "0.1.0" }
thiserror.workspace = true

# Shared by both backends (JSON request/response handling). Optional so a build
# with neither backend stays minimal; every concrete feature re-enables them.
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# --- OpenRouter (hosted) backend dependencies ---
# Blocking client (the texo-core traits are synchronous). rustls-tls only: no
# OpenSSL system dependency. default-features off drops the default native-tls.
[dependencies.reqwest]
version = "0.12"
optional = true
default-features = false
features = ["blocking", "json", "rustls-tls"]

# --- Local ONNX backend dependencies (feature `local-onnx`) ---
# fastembed bundles ort + downloads models at runtime from the HF Hub. Default
# features pull `ort-download-binaries-native-tls` and `hf-hub-native-tls`, so the
# native ONNX Runtime binary is fetched automatically on first build.
[dependencies.fastembed]
version = "=5.17.2"
optional = true

# NLI runs directly on ort. The version is pinned to EXACTLY what fastembed 5.17.2
# depends on (`=2.0.0-rc.12`) so Cargo unifies a single ort/ort-sys build; a mismatch
# would link two incompatible ONNX Runtime versions. Features mirror fastembed's set
# (ndarray, std, api-24) plus `download-binaries` so the runtime is fetched, and a TLS
# backend for that download.
[dependencies.ort]
version = "=2.0.0-rc.12"
optional = true
default-features = false
features = ["ndarray", "std", "api-24", "download-binaries", "tls-native"]

# Pinned to the version fastembed resolves (`ndarray 0.17.2`) so the array types
# exchanged with `ort` are the same crate.
[dependencies.ndarray]
version = "=0.17.2"
optional = true
default-features = false

# Pinned to fastembed's tokenizers (`0.22.2`); `onig` matches fastembed's feature set.
[dependencies.tokenizers]
version = "=0.22.2"
optional = true
default-features = false
features = ["onig"]

# Used to fetch the NLI model + tokenizer + config at runtime. `ureq` is the same
# blocking HTTP backend fastembed selects, so no async runtime is required.
[dependencies.hf-hub]
version = "=0.5.0"
optional = true
default-features = false
features = ["ureq", "native-tls"]

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
